fix intersectionobserver bug on small screens, disable smooth scrolling

--- a/_includes/assets/css/main.css
+++ b/_includes/assets/css/main.css
@@ -18,7 +18,6 @@
   font-family: "Roboto", sans-serif;
   background-color: #f8e3ff;
   color: #320940;
-  scroll-behavior: smooth;
 }
 
 body {
