--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -32,7 +32,6 @@ $line-height-small: 0.8 * $ratio;
   font-family: $font-sans-serif;
   background-color: $color-lightest;
   color: $color-darkest;
-  scroll-behavior: smooth;
 }
 
 // font antialiasing
